--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -4,13 +4,13 @@ Changelog
 0.2.1 (unreleased)
 ------------------
 
-- Nothing changed yet.
-
+- Store string representation of job error instead of error instance,
+to avoid issue when unpickling certain strange error types.
 
 0.2.0 (2012-11-12)
 ------------------
 
-- Simplify start service code; get rid of start * services 
+- Simplify start service code; get rid of start * services.
 
 
 0.1-alpha-4 (2011-05-16)
@@ -28,10 +28,10 @@ Changelog
 0.1-alpha-2 (2010-10-19)
 ------------------------
 
-- Removed use of `_p_jar`
+- Removed use of `_p_jar`.
 
 
 0.1-alpha-1 (2010-09-27)
 ------------------------
 
-- Initial release
+- Initial release.
